# agentliveness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: CNAME  index.html
src/agentliveness/: __init__.py  audit.py  liveness.py  loud_fail.py  persistent_state.py
tests/: test_audit.py  test_liveness.py  test_loud_fail.py  test_restart.py
