[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentliveness"
version = "0.4.0"
description = "A reliability harness for scheduled/autonomous agent systems: persist state across runs, prove liveness not just freshness, fail loud, and scan for the failure class before it ships."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Anand Suresh" }]
keywords = ["agents", "reliability", "liveness", "scheduler", "launchd", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/anandsureshworks/agentliveness"
Repository = "https://github.com/anandsureshworks/agentliveness"
Issues = "https://github.com/anandsureshworks/agentliveness/issues"
Changelog = "https://github.com/anandsureshworks/agentliveness/blob/main/CHANGELOG.md"

[project.scripts]
agentliveness = "agentliveness.audit:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
# Default (E/F) plus flake8-bandit security rules (S) — static vuln scanning.
extend-select = ["S"]
# S404: importing subprocess is intentional (the loud_fail notification sink);
# the one call site is individually justified with a targeted noqa.
ignore = ["S404"]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use bare asserts (pytest) and spawn real subprocesses —
# the restart/liveness proofs are the whole point of the suite.
"tests/**" = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
